crates/agtrace-cli/tests/snapshots/watch_tui__render_120x40_timeline_focused.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
expression: "draw(&view, &mut ui, 120, 40)"
---
"┌ Agents · project demo-project ───────┐┏ ▶ s-lead · claude-opus-5-5[1m] · 42% of 1.0M [1m] ━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"│  codex /root              ○ idle  12%│┃now   ▸ Bash mise run test  (10s)                                             ┃"
"│  ├ judge                  ● busy  77%│┃12:00 › user           Audit the parser with a team of reviewers              ┃"
"│  │ └ x                    ● busy   5%│┃12:00 ◆ model          claude-opus-5                                          ┃"
"│  └ scout                  ✓ done  15%│┃12:00 •                Spawning two reviewers and an explorer.                ┃"
"│▶ s-lead                   ● busy  42%│┃12:00 ⇢ spawn          audit-A (teammate, general-purpose, claude-opus-5)     ┃"
"│  ├ T audit-A              ○ idle  12%│┃12:00 ⇢ spawn          audit-B (teammate, general-purpose)                    ┃"
"│  ├ T audit-B              ○ idle   9%│┃12:00 → audit-A        NEW_TASK "review parser"                               ┃"
"│  ├ S explore call sites   ✓ done  15%│┃12:00 ⇢ spawn          explore call sites (subagent, Explore, claude-sonnet-5)┃"
"│  └ F fork: bench          ● busy  75%│┃12:00 ⇢ spawn          fork: bench (fork)                                     ┃"
"│                                      │┃12:00 ⏹ interrupted                                                           ┃"
"│                                      │┃12:00 ↲ queued         also check the tokenizer                               ┃"
"│                                      │┃12:01 ← audit-A        MESSAGE "done, found 3 bugs"                           ┃"
"│                                      │┃12:01 ◆ model          claude-opus-5 → claude-opus-5-5[1m]                    ┃"
"│                                      │┃12:01 ⟲ compact        974k→112k (auto)                                       ┃"
"│                                      │┃12:01 ◇ audit-B        idle                                                   ┃"
"│                                      │┃12:02 ◇ explore call s done                                                   ┃"
"│                                      │┃12:02 ← explore call s TASK_NOTIFY "found 2 call sites"                       ┃"
"│                                      │┃12:04 ▸ Bash           mise run test                                          ┃"
"│                                      │┃                                                                              ┃"
"│                                      │┃                                                                              ┃"
"│                                      │┃                                                                              ┃"
"│                                      │┃                                                                              ┃"
"│                                      │┃                                                                              ┃"
"│                                      │┃                                                                              ┃"
"│                                      │┃                                                                              ┃"
"│                                      │┃                                                                              ┃"
"│                                      │┃                                                                              ┃"
"└──────────────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┌ Messages ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│12:01 audit-A → s-lead            MESSAGE      "done, found 3 bugs"                                                   │"
"│12:01 /root/judge → /root/judge/x spawn thread                                                                        │"
"│12:01 audit-B                     idle                                                                                │"
"│12:02 /root/scout → /root         FINAL_ANSWER "3 flaky tests, all in watch_command.rs"                               │"
"│12:02 /root/scout                 done                                                                                │"
"│12:02 /root → /root/judge         MESSAGE      [encrypted]                                                            │"
"│12:02 explore call sites          done                                                                                │"
"│12:02 explore call sites → s-lead TASK_NOTIFY  "found 2 call sites"                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" TIMELINE · s-lead  9 agents (4 running, 3 idle)                                        j/k scroll · G follow · Esc back"
