crates/agtrace-cli/tests/snapshots/watch_tui__render_120x40_toast.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
expression: "draw(&view, &mut ui, w, h)"
---
"┏ ▶ Agents · project demo-project ━━━━━┓┌ /root · gpt-5.6 · 12% of 258k [log] ─────────────────────────────────────────┐"
"┃▶ ▸+3 codex /root          ○ idle  12%┃│now   turn completed 2m39s ago                                                │"
"┃  s-lead                   ● busy  42%┃│12:00 › user        triage the flaky tests                                    │"
"┃  ├ T audit-A              ○ idle  12%┃│12:00 ◆ model       gpt-5.6                                                   │"
"┃  ├ T audit-B              ○ idle   9%┃│12:00 ⇢ spawn       judge (thread)                                            │"
"┃  ├ S explore call sites   ✓ done  15%┃│12:00 → /root/judge NEW_TASK [encrypted]                                      │"
"┃  └ F fork: bench          ● busy  75%┃│12:00 ⇢ spawn       scout (thread)                                            │"
"┃                                      ┃│12:00 → /root/scout NEW_TASK [encrypted]                                      │"
"┃                                      ┃│12:02 ← /root/scout FINAL_ANSWER "3 flaky tests, all in watch_command.rs"     │"
"┃                                      ┃│12:02 ◇ /root/scout done                                                      │"
"┃                                      ┃│12:02 ⟲ compact     240k→? (auto)                                             │"
"┃                                      ┃│12:02 → /root/judge MESSAGE [encrypted]                                       │"
"┃                                      ┃│12:02 ─ turn end                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┃                                      ┃│                                                                              │"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Messages ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│12:01 audit-A → s-lead            MESSAGE      "done, found 3 bugs"                                                   │"
"│12:01 /root/judge → /root/judge/x spawn thread                                                                        │"
"│12:01 audit-B                     idle                                                                                │"
"│12:02 /root/scout → /root         FINAL_ANSWER "3 flaky tests, all in watch_command.rs"                               │"
"│12:02 /root/scout                 done                                                                                │"
"│12:02 /root → /root/judge         MESSAGE      [encrypted]                                                            │"
"│12:02 explore call sites          done                                                                                │"
"│12:02 explore call sites → s-lead TASK_NOTIFY  "found 2 call sites"                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" AGENTS  ▸ collapsed /root (+3 hidden)         ↵ detail · space fold · f msgs · d done · 1 overview · ? help · Esc:reset"
