crates/agtrace-cli/tests/snapshots/watch_tui__render_80x24_feed_focused.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
expression: "draw(&view, &mut ui, 80, 24)"
---
"┌ Agents · project demo-pro┐┌ s-lead · claude-opus-5-5[1m] · 42% of 1.0M [1m] ─┐"
"│▶ Audit the pa ● busy  42%││now   ▸ Bash mise run test  (10s)                 │"
"│  ├ T audit-A  ○ idle  12%││12:00 ⇢ spawn          audit-A (teammate, general-│"
"│  ├ T audit-B  ○ idle   9%││12:00 ⇢ spawn          audit-B (teammate, general-│"
"│  ├ S explore  ✓ done  15%││12:00 → audit-A        NEW_TASK "review parser"   │"
"│  └ F fork: be ● busy  75%││12:00 ⇢ spawn          explore call sites (subagen│"
"│  codex triage ○ idle  12%││12:00 ⇢ spawn          fork: bench (fork)         │"
"│  ├ judge      ● busy  77%││12:00 ⏹ interrupted                               │"
"│  │ └ x        ● busy   5%││12:00 ↲ queued         also check the tokenizer   │"
"│  └ scout      ✓ done  15%││12:01 ← audit-A        MESSAGE "done, found 3 bugs│"
"│                          ││12:01 ◆ model          claude-opus-5 → claude-opus│"
"│                          ││12:01 ⟲ compact        974k→112k (auto)           │"
"│                          ││12:01 ◇ audit-B        idle                       │"
"│                          ││12:02 ◇ explore call s done                       │"
"│                          ││12:02 ← explore call s TASK_NOTIFY "found 2 call s│"
"│                          ││12:04 ▸ Bash           mise run test              │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
"┏ ▶ Messages ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃12:02 /root/scout                 done                                        ┃"
"┃12:02 /root → /root/judge         MESSAGE     [encrypted]                     ┃"
"┃12:02 explore call sites          done                                        ┃"
"┃12:02 explore call sites → s-lead TASK_NOTIFY "found 2 call sites"            ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" MESSAGES  2 sessions (2 live) · 9 agents (4 run)          j/k scroll · Esc back"
