crates/agtrace-cli/tests/snapshots/watch_tui__render_80x24_help_overlay.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
assertion_line: 168
expression: "draw(&view, &mut ui, 80, 24)"
---
"┌ Agents ──────────────────┐┌ /root · gpt-5.6 · 12% of 258k [log] ─────────────┐"
"│▶ codex /root  ○ idle  12%││now   turn completed 2m39s ago                    │"
"│  ├ judge      ● busy  77%││12:00 › user        triage the flaky tests        │"
"│  │ └ x        ● busy   5%││12:00 ◆ model       gpt-5.6                       │"
"│  └ scout      ✓ done  15%││12:00 ⇢ spawn       judge (thread)                │"
"│  s-lead   ┌ Keys ────────────────────────────────────────────────┐]          │"
"│  ├ T audit│ j/k ↓/↑     move selection (or scroll focused pane)  │           │"
"│  ├ T audit│ Enter/space collapse / expand node                   │]          │"
"│  ├ S explo│ Tab/S-Tab   cycle pane focus                         │ky tests, a│"
"│  └ F fork:│ PgUp/PgDn   scroll focused pane                      │           │"
"│           │ C-u/C-d     half-page scroll                         │           │"
"│           │ G / g       jump to tail (follow) / top              │           │"
"│           │ f           feed: all ↔ selected agent               │           │"
"│           │ h           hide / show done & killed                │           │"
"│           │ a           auto-select most active agent            │           │"
"│           │ r           rescan now                               │           │"
"└───────────│ ?           toggle this help                         │───────────┘"
"┌ Messages ─│ q / C-c     quit                                     │───────────┐"
"│12:02 /root└──────────────────────────────────────────────────────┘           │"
"│12:02 /root → /root/judge         MESSAGE     [encrypted]                     │"
"│12:02 explore call sites          done                                        │"
"│12:02 explore call sites → s-lead TASK_NOTIFY "found 2 call sites"            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" scope: project demo-project · 9 agents (4 running, 3 idle) · ?:help q:quit     "
