crates/agtrace-cli/tests/snapshots/watch_tui__render_80x24_timeline_focused.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
expression: "draw(&view, &mut ui, 80, 24)"
---
"┌ Agents · project demo-pro┐┏ ▶ s-lead · claude-opus-5-5[1m] · 42% of 1.0M [1m]┓"
"│  codex /root  ○ idle  12%│┃now   ▸ Bash mise run test  (10s)                 ┃"
"│  ├ judge      ● busy  77%│┃12:00 ⇢ spawn          audit-A (teammate, general-┃"
"│  │ └ x        ● busy   5%│┃12:00 ⇢ spawn          audit-B (teammate, general-┃"
"│  └ scout      ✓ done  15%│┃12:00 → audit-A        NEW_TASK "review parser"   ┃"
"│▶ s-lead       ● busy  42%│┃12:00 ⇢ spawn          explore call sites (subagen┃"
"│  ├ T audit-A  ○ idle  12%│┃12:00 ⇢ spawn          fork: bench (fork)         ┃"
"│  ├ T audit-B  ○ idle   9%│┃12:00 ⏹ interrupted                               ┃"
"│  ├ S explore  ✓ done  15%│┃12:00 ↲ queued         also check the tokenizer   ┃"
"│  └ F fork: be ● busy  75%│┃12:01 ← audit-A        MESSAGE "done, found 3 bugs┃"
"│                          │┃12:01 ◆ model          claude-opus-5 → claude-opus┃"
"│                          │┃12:01 ⟲ compact        974k→112k (auto)           ┃"
"│                          │┃12:01 ◇ audit-B        idle                       ┃"
"│                          │┃12:02 ◇ explore call s done                       ┃"
"│                          │┃12:02 ← explore call s TASK_NOTIFY "found 2 call s┃"
"│                          │┃12:04 ▸ Bash           mise run test              ┃"
"└──────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┌ Messages ────────────────────────────────────────────────────────────────────┐"
"│12:02 /root/scout                 done                                        │"
"│12:02 /root → /root/judge         MESSAGE     [encrypted]                     │"
"│12:02 explore call sites          done                                        │"
"│12:02 explore call sites → s-lead TASK_NOTIFY "found 2 call sites"            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" TIMELINE · s-lead  9 agents (4 running, 3 idle)           j/k scroll · Esc back"
