crates/agtrace-cli/tests/snapshots/watch_tui__render_80x24_toast.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
expression: "draw(&view, &mut ui, w, h)"
---
"┏ ▶ Agents · project demo-p┓┌ /root · gpt-5.6 · 12% of 258k [log] ─────────────┐"
"┃▶ ▸+3 codex /r ○ idle  12%┃│now   turn completed 2m39s ago                    │"
"┃  s-lead       ● busy  42%┃│12:00 › user        triage the flaky tests        │"
"┃  ├ T audit-A  ○ idle  12%┃│12:00 ◆ model       gpt-5.6                       │"
"┃  ├ T audit-B  ○ idle   9%┃│12:00 ⇢ spawn       judge (thread)                │"
"┃  ├ S explore  ✓ done  15%┃│12:00 → /root/judge NEW_TASK [encrypted]          │"
"┃  └ F fork: be ● busy  75%┃│12:00 ⇢ spawn       scout (thread)                │"
"┃                          ┃│12:00 → /root/scout NEW_TASK [encrypted]          │"
"┃                          ┃│12:02 ← /root/scout FINAL_ANSWER "3 flaky tests, a│"
"┃                          ┃│12:02 ◇ /root/scout done                          │"
"┃                          ┃│12:02 ⟲ compact     240k→? (auto)                 │"
"┃                          ┃│12:02 → /root/judge MESSAGE [encrypted]           │"
"┃                          ┃│12:02 ─ turn end                                  │"
"┃                          ┃│                                                  │"
"┃                          ┃│                                                  │"
"┃                          ┃│                                                  │"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────┘"
"┌ Messages ────────────────────────────────────────────────────────────────────┐"
"│12:02 /root/scout                 done                                        │"
"│12:02 /root → /root/judge         MESSAGE     [encrypted]                     │"
"│12:02 explore call sites          done                                        │"
"│12:02 explore call sites → s-lead TASK_NOTIFY "found 2 call sites"            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" AGENTS  ▸ collapsed /root (+3 hidden)             ↵ detail · ? help · Esc:reset"
