crates/agtrace-cli/tests/snapshots/watch_tui__render_agent_140x40.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
expression: out
---
"┌ Navigator ───────────────────────────┐┏ ▶ audit-A ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"│ ◆ demo-project  2 live               │┃audit-A · teammate of s-lead (team audit) · general-purpose · claude-opus-5 · ○ idle 3m           ┃"
"│ ▾ ● Audit the parser with a tea…  42%│┃ctx █░░░░░░░░░ 12% of 200k [table]  ▁   in 24k / out 10 · 1 turns · 1 tools                       ┃"
"│▶ ├ ○ T audit-A                    12%│┃── [i] Instructions (1) ──────────────────────────────────────────────────────────────────────────┃"
"│  ├ ○ T audit-B                     9%│┃[12:00 spawned by s-lead · NEW_TASK]                                                              ┃"
"│  ├ ✓ S explore call sites         15%│┃  review parser                                                                                   ┃"
"│  └ ● F fork: bench                75%│┃── [n] Now ───────────────────────────────────────────────────────────────────────────────────────┃"
"│ ▾ ● codex triage the flaky tests  12%│┃idle — waiting for input                                                                          ┃"
"│  ├ ▾ ● judge                      77%│┃tasks (0/1 done):                                                                                 ┃"
"│  │ └ ● x                           5%│┃  ▸ Reviewing the parser                                                                          ┃"
"│  └ ✓ scout                        15%│┃── [r] Result ────────────────────────────────────────────────────────────────────────────────────┃"
"│                                      │┃(idle — no result reported yet)                                                                   ┃"
"│                                      │┃── ▶ [t] Timeline (5) ────────────────────────────────────────────────────────────────────────────┃"
"│                                      │┃12:00 ← s-lead   NEW_TASK "review parser"                                                         ┃"
"│                                      │┃12:00 ▸ Bash     cargo test -p parser                                                             ┃"
"│                                      │┃12:00 ✗ error    3 failed                                                                         ┃"
"│                                      │┃12:01 → s-lead   MESSAGE "done, found 3 bugs"                                                     ┃"
"│                                      │┃12:01 ─ turn end                                                                                  ┃"
"│                                      │┃                                                                                                  ┃"
"│                                      │┃                                                                                                  ┃"
"│                                      │┃                                                                                                  ┃"
"│                                      │┃                                                                                                  ┃"
"│                                      │┃                                                                                                  ┃"
"│                                      │┃                                                                                                  ┃"
"│                                      │┃                                                                                                  ┃"
"│                                      │┃                                                                                                  ┃"
"│                                      │┃                                                                                                  ┃"
"│                                      │┃                                                                                                  ┃"
"│                                      │┃                                                                                                  ┃"
"│                                      │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"│                                      │┌ Messages · audit-A ──────────────────────────────────────────────────────────────────────────────┐"
"│                                      ││12:00 s-lead → audit-A spawn teammate general-purpose                                             │"
"│                                      ││12:00 s-lead → audit-A NEW_TASK       "review parser"                                             │"
"│                                      ││12:01 audit-A → s-lead MESSAGE        "done, found 3 bugs"                                        │"
"│                                      ││                                                                                                  │"
"│                                      ││                                                                                                  │"
"│                                      ││                                                                                                  │"
"│                                      ││                                                                                                  │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" demo-project › Audit the parser wi… › audit-A · TIMELINE  2 sessions (2 live) · 9 agents (4 run)                j/k scroll · ← nav · ? help"
