crates/agtrace-cli/tests/snapshots/watch_tui__render_agent_80x24.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
expression: "draw(&view, &mut ui, 80, 24)"
---
"┌ Navigator ───────────┐┏ ▶ /root/scout ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"│ ◆ demo-project       │┃/root/scout · thread of /root · gpt-5.6 · effort low …┃"
"│ ▾ ● Audit the parser…│┃ctx ██░░░░░░░░ 15% of 258k [log]  ▂   in 40k / out 10…┃"
"│  ├ ○ T audit-A       │┃── [i] Instructions (1) ──────────────────────────────┃"
"│  ├ ○ T audit-B       │┃[12:00 spawned by /root · NEW_TASK]                   ┃"
"│  ├ ✓ S explore call …│┃  [encrypted by Codex] NEW_TASK from /root · path     ┃"
"│  └ ● F fork: bench   │┃  /root/scout · task scout                            ┃"
"│ ▾ ● codex triage the…│┃── [n] Now ───────────────────────────────────────────┃"
"│  ├ ▾ ● judge         │┃done                                                  ┃"
"│  │ └ ● x             │┃── ▶ [r] Result ──────────────────────────────────────┃"
"│▶ └ ✓ scout           │┃[12:02 FINAL_ANSWER]                                  ┃"
"│                      │┃  3 flaky tests, all in watch_command.rs              ┃"
"│                      │┃── [t] Timeline (3) ──────────────────────────────────┃"
"│                      │┃12:00 ← /root    NEW_TASK [encrypted]                 ┃"
"│                      │┃12:01 → /root    FINAL_ANSWER "3 flaky tests, all in …┃"
"│                      │┃12:02 ─ turn end                                      ┃"
"│                      │┃                                                      ┃"
"│                      │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"│                      │┌ Messages · /root/scout ──────────────────────────────┐"
"│                      ││12:00 /root → /root/scout NEW_TASK     [encrypted]    │"
"│                      ││12:02 /root/scout → /root FINAL_ANSWER "3 flaky tests,│"
"│                      ││12:02 /root/scout         done                        │"
"└──────────────────────┘└──────────────────────────────────────────────────────┘"
" demo-… › triag… › scout · RESULT  2 sessions (2 live) · 9 agen…  ← nav · ? help"
