crates/agtrace-cli/tests/snapshots/watch_tui__render_detail_codex_child_80x24.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
expression: "draw(&view, &mut ui, 80, 24)"
---
"┏ ▶ Detail · /root/scout ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃/root/scout · thread of /root · gpt-5.6 · effort low · ✓ done 3m              ┃"
"┃ctx ██░░░░░░░░ 15% of 258k [log]  ▂   in 40k / out 10 · 1 turns · 0 tools     ┃"
"┃── ▶ Instructions (1) ────────────────────────────────────────────────────────┃"
"┃[12:00 spawned by /root · NEW_TASK]                                           ┃"
"┃  [encrypted by Codex] NEW_TASK from /root · path /root/scout · task scout    ┃"
"┃── Now ───────────────────────────────────────────────────────────────────────┃"
"┃done                                                                          ┃"
"┃── Result ────────────────────────────────────────────────────────────────────┃"
"┃[12:02 FINAL_ANSWER]                                                          ┃"
"┃  3 flaky tests, all in watch_command.rs                                      ┃"
"┃── Timeline (3) ──────────────────────────────────────────────────────────────┃"
"┃12:00 ← /root    NEW_TASK [encrypted]                                         ┃"
"┃12:01 → /root    FINAL_ANSWER "3 flaky tests, all in watch_command.rs"        ┃"
"┃12:02 ─ turn end                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" DETAIL · /root/scout · INSTRUCTIONS  9 agents (4 running, 3 idle)      Esc back"
