crates/agtrace-cli/tests/snapshots/watch_tui__render_detail_codex_root_goal_and_plan_100x30.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
expression: "draw(&view, &mut ui, 100, 30)"
---
"┏ ▶ Detail · /root ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃/root · codex root thread · gpt-5.6 · effort medium · ○ idle 2m                                   ┃"
"┃ctx █░░░░░░░░░ 12% of 258k [log]  ▂⟲▁   in 91k / out 20 · 1 turns · 0 tools                       ┃"
"┃── Instructions (1) ──────────────────────────────────────────────────────────────────────────────┃"
"┃[12:00 user]                                                                                      ┃"
"┃  triage the flaky tests                                                                          ┃"
"┃── ▶ Now ─────────────────────────────────────────────────────────────────────────────────────────┃"
"┃idle — waiting for input                                                                          ┃"
"┃Goal: Make the watch tests deterministic (active)                                                 ┃"
"┃plan (12:00):                                                                                     ┃"
"┃  # Triage                                                                                        ┃"
"┃                                                                                                  ┃"
"┃  1. Reproduce each flaky test in a loop.                                                         ┃"
"┃  2. Fix the timing assumption.                                                                   ┃"
"┃  3. Verify with 50 runs.                                                                         ┃"
"┃── Result ────────────────────────────────────────────────────────────────────────────────────────┃"
"┃(idle — no result reported yet)                                                                   ┃"
"┃── Timeline (11) ──────────────────────────────────────────────────────────────────────── 2-11/11 ┃"
"┃12:00 ◆ model       gpt-5.6                                                                       ┃"
"┃12:00 ⇢ spawn       judge (thread)                                                                ┃"
"┃12:00 → /root/judge NEW_TASK [encrypted]                                                          ┃"
"┃12:00 ⇢ spawn       scout (thread)                                                                ┃"
"┃12:00 → /root/scout NEW_TASK [encrypted]                                                          ┃"
"┃12:02 ← /root/scout FINAL_ANSWER "3 flaky tests, all in watch_command.rs"                         ┃"
"┃12:02 ◇ /root/scout done                                                                          ┃"
"┃12:02 ⟲ compact     240k→? (auto)                                                                 ┃"
"┃12:02 → /root/judge MESSAGE [encrypted]                                                           ┃"
"┃12:02 ─ turn end                                                                                  ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" DETAIL · /root · NOW  9 agents (4 running, 3 idle)              Tab section · j/k scroll · Esc back"
